<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/ic_smile"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@drawable/icon_smile" />

    <TextView
        android:id="@+id/tv_title_congra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ic_smile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/congratulation"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/txt_ride_come"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title_congra"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:text="@string/a_new_ride"
        android:textSize="17dp" />


    <Button
        android:id="@+id/btn_pas_call"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/txt_ride_come"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/yellow_solid_box"
        android:text="@string/call"
        android:textAllCaps="false"
        android:textColor="@color/white_dark" />


    <Button
        android:id="@+id/btn_pas_sms"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/btn_pas_call"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/yellow_border_box"
        android:text="@string/send_sms"
        android:textAllCaps="false"
        android:textColor="@color/yellowDark" />


    <Button
        android:id="@+id/btn_pas_cancel"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/btn_pas_sms"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/yellow_border_box"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/yellowDark" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@+id/btn_pas_cancel"
        android:layout_marginTop="20dp"
        android:background="@color/white_dark">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentTop="true"
            android:background="@color/wallet_bright_foreground_disabled_holo_light" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/new_passenger"
            android:textSize="@dimen/activity_vertical_margin" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/wallet_bright_foreground_disabled_holo_light" />

    </RelativeLayout>

</RelativeLayout>