<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context="com.example.manh.taxiloy_project.MainActivity">

    <FrameLayout
        android:id="@+id/statusBar"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="@color/colorPrimary"></FrameLayout>

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/statusBar"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="false">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:focusable="false"
                    android:text="@string/support"
                    android:textColor="@color/white_dark"
                    android:textSize="20dp" />
            </RelativeLayout>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/txt_sp_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/title"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/edt_sp_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_text_box"
        android:layout_below="@+id/txt_sp_title"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:paddingLeft="12dp"
        android:singleLine="true"
        android:background="@drawable/black_border_box" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_miss_title"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp"
        android:textColor="@color/pinkLight"
        android:text="@string/miss_title"
        android:visibility="gone"
        android:singleLine="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txt_sp_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/content_report"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/edt_sp_content"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/txt_sp_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:paddingTop="3dp"
        android:paddingLeft="12dp"
        android:gravity="left|top"
        android:background="@drawable/black_border_box" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_miss_content"
        android:text="@string/miss_content"
        android:textColor="@color/pinkLight"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_sp_send"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_text_box"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/yellow_solid_box"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textColor="@color/white_dark"
        android:textSize="15dp" />

    <Button
        android:id="@+id/btn_sp_call"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_text_box"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:drawableLeft="@drawable/icon_phone"

        android:background="@drawable/yellow_border_box"
        android:text="@string/support_call"
        android:textAllCaps="false"
        android:textColor="@color/yellowDark"
        android:textSize="15dp" />

</LinearLayout>